# Copyright (C) 2004 Dilip Antony Joseph <dilip@cs.berkeley.edu>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

I3SERVER_SUBDIR = chord 
#i3_server
SUBDIRS= aeshash utils i3 i3_client $(EXAMPLE_SUBDIR) $(I3SERVER_SUBDIR)

